--- a/Clicina-Veterinaria-master/src/main/resources/application.properties
+++ b/Clicina-Veterinaria-master/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Clicina-Veterinaria
+spring.datasource.url=jdbc:mysql://localhost:3306/nome_do_banco
+spring.datasource.username=root
+spring.datasource.password=wlad123456789+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
